# diplom

./: CMakeLists.txt  README.md  gradient_method.cpp  gradient_method.h  graph.cpp  graph.h  input_adjacency_4.csv  input_adjacency_9.csv  main.cpp  output_4.csv  output_9.csv  problem_opt2.h  rec_adj_4.csv  rec_adj_9.csv
